@@ -1739,7 +1739,7 @@ DISABLE=DBERRORQUESTART, COMMAND_POSE, QUITREASON, RETIREREASON
 #    DBROOMPOP, POLLCACHE, SAVETHREAD, UTLITHREAD, PROPERTY, MISSINGKIDS,
 #    CATALOGTHREAD, CATALOGCACHE, OUTPUT, HTTPACCESS, RESPAWNTHREAD, HTTPMACROS
 #    BADSCRIPTS, CMJRNL, PLAYERSTATS, CLANS, THINGRIDS, MUDPERCOLATOR,
-#    CLANMEMBERS, SHUTDOWN
+#    CLANMEMBERS, SHUTDOWN, HYGIENE
 # Default is empty.
 DEBUG=
 
