@@ -1363,7 +1363,8 @@ public class CMSecurity
 		SLOW_AGEING("real ageing"),
 		ALL_AGEING("age system"),
 		CHANNELBACKLOGS("channel backlog system"),
-		MCP("mcp protocol")
+		MCP("mcp protocol"),
+		HYGIENE("hygiene system")
 		;
 		private final String desc;
 		DisFlag(final String description){this.desc=description;}
